--- a/pics/pics/TableViewCell.xib
+++ b/pics/pics/TableViewCell.xib
@@ -19,17 +19,42 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="O77-g9-R9F">
-                        <rect key="frame" x="0.0" y="0.0" width="160" height="80"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O77-g9-R9F">
+                        <rect key="frame" x="0.0" y="0.0" width="250" height="79.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="250" id="dYS-qg-NHv"/>
+                        </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Biography" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bcP-HC-Z7f">
+                        <rect key="frame" x="258" y="11" width="78" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Cf-4e-I86">
+                        <rect key="frame" x="258" y="48" width="52" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="O77-g9-R9F" secondAttribute="bottom" id="Afg-zk-pEc"/>
+                    <constraint firstItem="O77-g9-R9F" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="FvB-Ph-FER"/>
+                    <constraint firstItem="bcP-HC-Z7f" firstAttribute="leading" secondItem="O77-g9-R9F" secondAttribute="trailing" constant="8" id="PrM-aw-Win"/>
+                    <constraint firstItem="O77-g9-R9F" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="UMp-JP-Zwe"/>
+                    <constraint firstItem="bcP-HC-Z7f" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Uzb-q2-U9R"/>
+                    <constraint firstItem="6Cf-4e-I86" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="eVO-Sx-9bf"/>
+                    <constraint firstItem="6Cf-4e-I86" firstAttribute="leading" secondItem="O77-g9-R9F" secondAttribute="trailing" constant="8" id="kVF-rE-ktQ"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="biography" destination="bcP-HC-Z7f" id="bZJ-Ym-Tm5"/>
                 <outlet property="unsplashImage" destination="O77-g9-R9F" id="3hT-XG-hLs"/>
+                <outlet property="user" destination="6Cf-4e-I86" id="Gf6-ez-kvp"/>
             </connections>
-            <point key="canvasLocation" x="-451" y="28"/>
+            <point key="canvasLocation" x="-451.19999999999999" y="27.886056971514247"/>
         </tableViewCell>
     </objects>
 </document>
