--- a/pics/pics/TableViewCell.xib
+++ b/pics/pics/TableViewCell.xib
@@ -12,40 +12,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="custom" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="pics" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="custom" rowHeight="159" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="pics" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="250" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="250" height="149.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O77-g9-R9F">
                         <rect key="frame" x="0.0" y="0.0" width="250" height="79.5"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="250" id="dYS-qg-NHv"/>
-                        </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Biography" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bcP-HC-Z7f">
-                        <rect key="frame" x="258" y="11" width="78" height="21"/>
+                        <rect key="frame" x="9" y="87.5" width="78" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="LbD-i3-kAp"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Cf-4e-I86">
-                        <rect key="frame" x="258" y="48" width="52" height="21"/>
+                        <rect key="frame" x="9" y="120.5" width="52" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="l0f-MT-9IE"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="O77-g9-R9F" secondAttribute="bottom" id="Afg-zk-pEc"/>
-                    <constraint firstItem="O77-g9-R9F" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="FvB-Ph-FER"/>
-                    <constraint firstItem="bcP-HC-Z7f" firstAttribute="leading" secondItem="O77-g9-R9F" secondAttribute="trailing" constant="8" id="PrM-aw-Win"/>
-                    <constraint firstItem="O77-g9-R9F" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="UMp-JP-Zwe"/>
-                    <constraint firstItem="bcP-HC-Z7f" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Uzb-q2-U9R"/>
-                    <constraint firstItem="6Cf-4e-I86" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="eVO-Sx-9bf"/>
-                    <constraint firstItem="6Cf-4e-I86" firstAttribute="leading" secondItem="O77-g9-R9F" secondAttribute="trailing" constant="8" id="kVF-rE-ktQ"/>
+                    <constraint firstItem="bcP-HC-Z7f" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="0N4-Eu-rew"/>
+                    <constraint firstItem="O77-g9-R9F" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="1P9-yH-dHI"/>
+                    <constraint firstItem="6Cf-4e-I86" firstAttribute="top" secondItem="bcP-HC-Z7f" secondAttribute="bottom" constant="12" id="HAu-J3-gge"/>
+                    <constraint firstAttribute="bottom" secondItem="6Cf-4e-I86" secondAttribute="bottom" constant="8" id="IOg-FM-acg"/>
+                    <constraint firstAttribute="trailing" secondItem="O77-g9-R9F" secondAttribute="trailing" id="dy1-Xb-bBD"/>
+                    <constraint firstItem="bcP-HC-Z7f" firstAttribute="top" secondItem="O77-g9-R9F" secondAttribute="bottom" constant="8" id="hfR-6m-8Ax"/>
+                    <constraint firstItem="O77-g9-R9F" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="pxN-fN-bCa"/>
+                    <constraint firstItem="6Cf-4e-I86" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="xHo-6m-q7Z"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -54,7 +58,7 @@
                 <outlet property="unsplashImage" destination="O77-g9-R9F" id="3hT-XG-hLs"/>
                 <outlet property="user" destination="6Cf-4e-I86" id="Gf6-ez-kvp"/>
             </connections>
-            <point key="canvasLocation" x="-451.19999999999999" y="27.886056971514247"/>
+            <point key="canvasLocation" x="-392.80000000000001" y="-97.601199400299862"/>
         </tableViewCell>
     </objects>
 </document>
