--- a/pics/pics/TableViewCell.xib
+++ b/pics/pics/TableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -40,14 +40,23 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kristine-tanne-1312704-unsplash" translatesAutoresizingMaskIntoConstraints="NO" id="f7e-r8-Uu5">
+                        <rect key="frame" x="76" y="112.5" width="40" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="35" id="hGH-H0-PNz"/>
+                            <constraint firstAttribute="width" constant="40" id="kUQ-8e-FaZ"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="bcP-HC-Z7f" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="0N4-Eu-rew"/>
                     <constraint firstItem="O77-g9-R9F" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="1P9-yH-dHI"/>
+                    <constraint firstItem="f7e-r8-Uu5" firstAttribute="leading" secondItem="6Cf-4e-I86" secondAttribute="trailing" constant="15" id="4Dy-Dy-nK7"/>
                     <constraint firstItem="6Cf-4e-I86" firstAttribute="top" secondItem="bcP-HC-Z7f" secondAttribute="bottom" constant="12" id="HAu-J3-gge"/>
                     <constraint firstAttribute="bottom" secondItem="6Cf-4e-I86" secondAttribute="bottom" constant="8" id="IOg-FM-acg"/>
                     <constraint firstAttribute="trailing" secondItem="O77-g9-R9F" secondAttribute="trailing" id="dy1-Xb-bBD"/>
                     <constraint firstItem="bcP-HC-Z7f" firstAttribute="top" secondItem="O77-g9-R9F" secondAttribute="bottom" constant="8" id="hfR-6m-8Ax"/>
+                    <constraint firstAttribute="bottom" secondItem="f7e-r8-Uu5" secondAttribute="bottom" constant="2" id="mRc-mm-Vsn"/>
                     <constraint firstItem="O77-g9-R9F" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="pxN-fN-bCa"/>
                     <constraint firstItem="6Cf-4e-I86" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="xHo-6m-q7Z"/>
                 </constraints>
@@ -55,10 +64,14 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="biography" destination="bcP-HC-Z7f" id="bZJ-Ym-Tm5"/>
+                <outlet property="profileImage" destination="f7e-r8-Uu5" id="Gb1-1A-uSZ"/>
                 <outlet property="unsplashImage" destination="O77-g9-R9F" id="3hT-XG-hLs"/>
                 <outlet property="user" destination="6Cf-4e-I86" id="Gf6-ez-kvp"/>
             </connections>
-            <point key="canvasLocation" x="-392.80000000000001" y="-97.601199400299862"/>
+            <point key="canvasLocation" x="24" y="-219.49025487256372"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="kristine-tanne-1312704-unsplash" width="2271" height="3478"/>
+    </resources>
 </document>
