--- a/pics/pics/Base.lproj/Main.storyboard
+++ b/pics/pics/Base.lproj/Main.storyboard
@@ -87,6 +87,36 @@
             </objects>
             <point key="canvasLocation" x="-79" y="-76"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="kEX-nj-Fgs">
+            <objects>
+                <viewController id="nRJ-TH-qVr" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Dcw-UP-oFi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="TVj-MK-4Ts"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KEU-UA-58B" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="678" y="-352"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="TwH-gD-MOf">
+            <objects>
+                <viewController id="sBy-Md-wPf" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pus-5W-pwR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="ltD-zc-dnn"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RMv-H7-uM7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="678" y="305"/>
+        </scene>
     </scenes>
     <resources>
         <image name="kristine-tanne-1312704-unsplash" width="2271" height="3478"/>
